--- a/.tmux.conf
+++ b/.tmux.conf
@@ -48,3 +48,6 @@ is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
 # allow clear screen after prefix
 bind C-l send-keys 'C-l'
 
+bind '"' split-window -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
